Added the Tek TBS-1072B-EDU oscilloscope to the lab page, reduced info on older TDS-210 oscilloscope 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/Link_to_TBS1000_Series_User_manual.txt 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/TBS-1072B-EDU_Product_Photo.png 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/TBS-1072B-EDU_Product_Photo_130x64.png 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/TBS1000-B-EDU-TDS2000-B-C-TDS1000-B-C-EDU-TDS200-TPS2000-Programmer.pdf 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/TBS1000B-User-Manual-077088601_2.pdf 	modified:   ddb/EE_LAB/electronics_lab_page.htm 	new file:   ddb/EE_LAB/electronics_lab_page_210228.htm

--- a/ddb/EE_LAB/electronics_lab_page_210228.htm
+++ b/ddb/EE_LAB/electronics_lab_page_210228.htm
@@ -222,43 +222,12 @@ adaptors may be moved to any other unused jacks when the +10 A and
 &ndash;10 A jacks are needed for the probes.) </i></td></tr>
 <tr><td colspan="2"><hr></td></tr>
 
-<!--  TEKTRONIX TBS-1072B-EDU OSCILLOSCOPE -->
-<tr><td style="vertical-align: top; text-align: center;">
-<img src="Tektronix/TBS-1072B/TBS-1072B-EDU_Product_Photo_130x64.png" width="130" height="67">
-</td><td style="vertical-align: top; text-align: left;">
-<b>Tektronix model TBS-1072B-EDU</b><br>
-Oscilloscope, 2-channels, 70 MHz Bandwidth<br>
-With USB computer interface<br>
-<a href="Tektronix/TBS-1072B/TBS1000B-User-Manual-077088601_2.pdf"
->User Manual</a> &nbsp; &nbsp; &nbsp;
-<a href="Tektronix/TBS-1072B/TBS1000-B-EDU-TDS2000-B-C-TDS1000-B-C-EDU-TDS200-TPS2000-Programmer.pdf"
->Programmer Manual</a> <br>
-<!--<a href="Tektronix/Scope_Screen_Capture.PDF"
->How to get a screen capture</a><br>--><br>
-<i>One per workbench, equipped with two matched X1/X10 switchable 
-probes.  Probes should normally be set to the X10 setting.  
-Leave the probes attached to the oscilloscope and place them behind 
-the oscilloscope for storage.  Do not wrap the probe wires up for 
-storage or bend them to less than 1" radius. (That damages them.)
-The oscilloscope is interfaced (via a USB connection on the back 
-of the oscilloscope) to the computer for screen capture and more. 
-<br><br>
-<b></i>OpenChoice Desktop<i></b>, a software package that 
-communicates with the TBS-1072B-EDU Oscilloscope, is installed on the 
-lab computers.  Start it from the start menu.<br><br>
-<b></i>The XYZ's of Oscilloscopes<i></b> booklet is available 
-in the filing cabinet in the storage room or via <a href=
-"http://instructure.dordt.edu">Canvas@Dordt</a> in most classes 
-that require use of an oscilloscope. (Look in the "Lab" or 
-"Links" sections of the course page) </i></td></tr>
-<tr><td colspan="2"><hr></td></tr>
-
 <!--  TEKTRONIX TDS-210 OSCILLOSCOPE -->
 <tr><td style="vertical-align: top; text-align: center;">
 <img src="Tektronix/Tek_TDS_210.jpg" width="130" height="67">
 </td><td style="vertical-align: top; text-align: left;">
 <b>Tektronix model TDS-210</b><br>
-Oscilloscope, 2-channels, 60 MHz Bandwidth<br>
+oscilloscope, 2-channels, 60 MHz Bandwidth<br>
 With IEEE-488 computer interface<br>
 <a href="Tektronix/TDS-210_DSO_Users_Manual_071039803.pdf"
 >User Manual</a> &nbsp; &nbsp; &nbsp;
@@ -267,8 +236,7 @@ With IEEE-488 computer interface<br>
 Extension Instructions <br>
 <a href="Tektronix/Scope_Screen_Capture.PDF"
 >How to get a screen capture</a><br><br>
-<i>A few of these models may be available from the storage room.
-They are equipped with two matched X1/X10 switchable 
+<i>One per workbench, equipped with two matched X1/X10 switchable 
 probes.  Probes should normally be set to the X10 setting.  
 Leave the probes attached to the oscilloscope and place them behind 
 the oscilloscope for storage.  Do not wrap the probe wires up for 
@@ -279,7 +247,12 @@ the extension module) to the computer for screen capture and more.
 <br><br>
 <b></i>OpenChoice Desktop<i></b>, a software package that 
 communicates with the TDS-210 Oscilloscope, is installed on the 
-lab computers.  Start it from the start menu.</td></tr>
+lab computers.  Start it from the start menu.<br><br>
+<b></i>The XYZ's of Oscilloscopes<i></b> booklet is available 
+in the filing cabinet in the storage room or via <a href=
+"http://instructure.dordt.edu">Canvas@Dordt</a> in most classes 
+that require use of an oscilloscope. (Look in the "Lab" or 
+"Links" sections of the course page) </i></td></tr>
 <tr><td colspan="2"><hr></td></tr>
 
 <!--  TESTMATE 175A DMM -->
