Updated the lab page by adding the probe manual and refining the description for the TBS-1072B-EDU scope 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/071278600web.pdf 	modified:   ddb/EE_LAB/electronics_lab_page.htm

--- a/ddb/EE_LAB/electronics_lab_page.htm
+++ b/ddb/EE_LAB/electronics_lab_page.htm
@@ -232,11 +232,12 @@ With USB computer interface<br>
 <a href="Tektronix/TBS-1072B/TBS1000B-User-Manual-077088601_2.pdf"
 >User Manual</a> &nbsp; &nbsp; &nbsp;
 <a href="Tektronix/TBS-1072B/TBS1000-B-EDU-TDS2000-B-C-TDS1000-B-C-EDU-TDS200-TPS2000-Programmer.pdf"
->Programmer Manual</a> <br>
+>Programmer Manual</a> &nbsp; &nbsp; &nbsp;
+<a href="Tektronix/TBS-1072B/071278600web.pdf"
+>Probe Manual</a><br>
 <!--<a href="Tektronix/Scope_Screen_Capture.PDF"
 >How to get a screen capture</a><br>--><br>
-<i>One per workbench, equipped with two matched X1/X10 switchable 
-probes.  Probes should normally be set to the X10 setting.  
+<i>One per workbench, equipped with two matched X10 probes.  
 Leave the probes attached to the oscilloscope and place them behind 
 the oscilloscope for storage.  Do not wrap the probe wires up for 
 storage or bend them to less than 1" radius. (That damages them.)
@@ -245,7 +246,7 @@ of the oscilloscope) to the computer for screen capture and more.
 <br><br>
 <b></i>OpenChoice Desktop<i></b>, a software package that 
 communicates with the TBS-1072B-EDU Oscilloscope, is installed on the 
-lab computers.  Start it from the start menu.<br><br>
+lab computers.  You may start it from the start menu.<br><br>
 <b></i>The XYZ's of Oscilloscopes<i></b> booklet is available 
 in the filing cabinet in the storage room or via <a href=
 "http://instructure.dordt.edu">Canvas@Dordt</a> in most classes 
