Added GW Instek GPD-3303S power supply to the lab page 	new file:   ddb/EE_LAB/Instek/GPD-3303S/20080521_UM_GPD-3303_V1_E.pdf 	new file:   ddb/EE_LAB/Instek/GPD-3303S/20080521_UM_GPD-3303_V1_E_r.pdf 	new file:   ddb/EE_LAB/Instek/GPD-3303S/Instek_SPD-3303S.png 	new file:   ddb/EE_LAB/Instek/GPD-3303S/Instek_SPD-3303S_130x87.png 	modified:   ddb/EE_LAB/electronics_lab_page.htm

--- a/ddb/EE_LAB/electronics_lab_page.htm
+++ b/ddb/EE_LAB/electronics_lab_page.htm
@@ -96,14 +96,13 @@ projects as needed.  </i></td></tr>
 Power Supply, Triple Output, 5 V @ 5 A, two 0&ndash;20 V @ 0&ndash;1 A<br>
 <a href="Elenco/xp-660.pdf"
 >Instruction Manual</a> &nbsp; &nbsp; &nbsp;<small>
-Note: The hard-copy manuals in the fileing cabinet <br>
+Note: The hard-copy manuals in the fileing <br>
 &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 &nbsp; 
-have out-of-date schematics.</small>
+cabinet have out-of-date schematics.</small>
 <br><br>
-<i>One power supply per workbench <br>
-(if not this one, then Heathkit) </i></td></tr>
+<i>There may be a few of these in the storage room.</i></td></tr>
 <tr><td colspan="2"><hr></td></tr>
 
 <!--  E&L Fox MT-80z  Microprocessor Trainer -->
@@ -166,8 +165,19 @@ not from the ends.</i></td></tr>
 Power Supply, Triple Output, 5 V @ 1.5 A, two 0&ndash;20 @ 0.5 A<br>
 <a href="Heath/SP-2718.PDF"
 >Operation/Service Manual</a> &nbsp; &nbsp; &nbsp;<br><br>
-<i>One power supply per workbench <br>
-(if not this one, then Elenco) </i></td></tr>
+<i>There may be a few of these in the storage room<br></i></td></tr>
+<tr><td colspan="2"><hr></td></tr>
+
+<!--  INSTEK GPD-3303S PROGRAMMABLE POWER SUPPLY -->
+<tr><td style="vertical-align: top; text-align: center;">
+<img src="Instek/GPD-3303S/Instek_SPD-3303S_130x87.png" width="130" height="87">
+</td><td style="vertical-align: top; text-align: left;">
+<b>Instek model GPD-3303S</b><br>
+Triple Power Supply, 2x 0-30 V, 0-3 A; &nbsp; 2.5, 3.3, 5 V, 3 A<br>
+<a href="Instek/GPD-3303S/20080521_UM_GPD-3303_V1_E_r.pdf"
+>User Manual</a> &nbsp; &nbsp; &nbsp;<br><br>
+<i>One power supply per workbench.
+</i></td></tr>
 <tr><td colspan="2"><hr></td></tr>
 
 <!--  INSTEK GFG-3015 SIGNAL GENERATOR -->
@@ -224,7 +234,7 @@ adaptors may be moved to any other unused jacks when the +10 A and
 
 <!--  TEKTRONIX TBS-1072B-EDU OSCILLOSCOPE -->
 <tr><td style="vertical-align: top; text-align: center;">
-<img src="Tektronix/TBS-1072B/TBS-1072B-EDU_Product_Photo_130x64.png" width="130" height="67">
+<img src="Tektronix/TBS-1072B/TBS-1072B-EDU_Product_Photo_130x64.png" width="130" height="64">
 </td><td style="vertical-align: top; text-align: left;">
 <b>Tektronix model TBS-1072B-EDU</b><br>
 Oscilloscope, 2-channels, 70 MHz Bandwidth<br>
