--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/01/2021 11:04 am)
+                              >(Last update: 3/02/2021 7:52 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,6 +84,26 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ &nbsp;
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        &nbsp;
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31611898"
+		>3/05</a>
+
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
+        >1/30</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: HF model of a MOSFET, and of a BJT     <br>&nbsp; 
+        Read: &nbsp; Ch. 10, Section 10.1              <BR>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>+10.2, 10.3 (more to be added. . .)</DO>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  6
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -98,11 +118,11 @@ PS                                                           <BR>
         "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
         >1/30</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: Transfer functions, Bode plots, HF model <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
-		        of a MOSFET                              <br>&nbsp; 
-        Read: &nbsp;Appendix F, Ch. 10, Section 10.1     <BR>&nbsp;
+        Topics: Transfer functions, Bode plots,          <br>&nbsp;
+        Read: &nbsp;Appendix F,                          <BR>&nbsp;
 		                                                 <br>&nbsp;
-        Do <DO>F.1, F.4, F.9, +10.2, 10.3</DO>
+        Do <DO>F.1, F.4, F.9</DO>                        <br>&nbsp;<small>
+		<i>(This assignment was shortened on Tuesday evening, 3/02.)</i></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
