Added to lab page, how to get a screen capture from TBS-1072B-EDU scope. 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/Scope_Screen_Capture_TBS-1072-EDU.DOC 	new file:   ddb/EE_LAB/Tektronix/TBS-1072B/Scope_Screen_Capture_TBS-1072-EDU.pdf 	modified:   ddb/EE_LAB/electronics_lab_page.htm

--- a/ddb/EE_LAB/electronics_lab_page.htm
+++ b/ddb/EE_LAB/electronics_lab_page.htm
@@ -245,8 +245,8 @@ With USB computer interface<br>
 >Programmer Manual</a> &nbsp; &nbsp; &nbsp;
 <a href="Tektronix/TBS-1072B/071278600web.pdf"
 >Probe Manual</a><br>
-<!--<a href="Tektronix/Scope_Screen_Capture.PDF"
->How to get a screen capture</a><br>--><br>
+<a href="Tektronix/TBS-1072B/Scope_Screen_Capture_TBS-1072-EDU.pdf"
+>How to get a screen capture</a><br><br>
 <i>One per workbench, equipped with two matched X10 probes.  
 Leave the probes attached to the oscilloscope and place them behind 
 the oscilloscope for storage.  Do not wrap the probe wires up for 
