--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -213,17 +213,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/201118386/download?download_frd=1"><!-- -->
 	  3/01<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/201399737/download?download_frd=1"><!-- -->
-      3/03<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      3/05<!-- --</a><!-- --></td>
+      3/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/201622073/download?download_frd=1"><!-- -->
+      3/05<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=0RbPPefggiI">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=BwUm2vlkNX4">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=zq3zTMX4COI">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Def'n Transfer Function, how to find TF via diff. Eq, via phasors<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Bode Plots:  how to plot magnitude and phase of real poles and zeros<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Bode Plots:  plot mag and phase of complex poles, zeros; Piano Freqs<!--end comment--></td>  
    </TR><!-- Week of 3/07 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
