Published info in HoW_S on directional microphones, started the omni section. 	new file:   HOW_S/MICS/Longitudinal_waves.png 	new file:   HOW_S/MICS/Longitudinal_waves_close.png 	new file:   HOW_S/MICS/Longitudinal_waves_close.xcf 	new file:   HOW_S/MICS/Omni1.png 	new file:   HOW_S/MICS/Omni1.xcf 	new file:   HOW_S/MICS/Omni2.png 	new file:   HOW_S/MICS/Omni2.xcf 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -213,7 +213,7 @@ better and there are more options located far from the origin and away from the 
 of optimization.<br><br>
 
 
-<h1>1.) Degree of miniaturization.</h1><p>
+<h1>1.) Degree of miniaturization (vs. directionality and fidelity)</h1><p>
 Actually, this category is more than just about physical size.  It is also about 
 how the microphone can be handled and positioned.  In the 1920's microphones were 
 large conical horns connected to metal pipes to route the acoustic energy to a 
@@ -733,7 +733,7 @@ tendency to fall over the person's shoulder instead.<br><br>
 <p align="center"><img src="Headworn_cord_dress.jpg"><br>
 <i>Above:  The wire leading to the microphone should be clipped to clothing.<br>
 As the wire exits the clip on its way to the mic it should face away from the 
-microphone so that the loop of wire falls on the person's back.<br>
+microphone so that the loop of wire falls on the center of the person's back.<br>
 </i><small><a href="https://www.pexels.com/photo/back-view-close-up-portrait-photo-of-man-in-red-plaid-shirt-2445984/"
 >Pexels stock photo</a> marked up</small><br><p>
 
@@ -744,7 +744,102 @@ may be better to resort to a lavalier or stand-mounted microphone.<br><br>
 This ends the discussion of miniaturization of microphones.  In order from 
 largest to smallest, studio, stand-mounted, installed, handheld, lavalier, 
 and head-worn microphones have been discussed.  The smaller the microphone is, 
-the harder it is to make it directional and high-fidelity.  
+the harder it is to make it directional and high-fidelity.<br><br>
+
+<h1>2.) Directionality (vs. miniaturization and fidelity)</h1><p>
+
+It is relatively easy to make a microphone that is not at all sensitive to the 
+direction of the sound as the sound approaches the microphone.  As the sensitivity 
+of the microphone to the direction of the approach of the sound waves is increased 
+the microphone becomes increasingly difficult to miniaturize and it becomes more 
+difficulty to maintain high-fidelity audio reproduction.  <br><br>
+
+A microphone that is completely insensitive to directionality is said to be 
+<i>omnidirectional</i>.  The next step in increasing the directionality of the 
+microphone results more in a microphone that rejects sounds from the back than 
+in a microphone that is highly sensitive to the direction from which it receives 
+sound.  This type of microphone accepts sound from lots of directions, except 
+from directly from the back side, from which it is designed to reject sound.  
+This type is called <i>cardioid</i>.  The next step of increased directionality 
+has a goal of narrowing the angle of acceptance of sound as a higher priority than
+rejecting sound from the back of the microphone.  This is a <i>super-cardioid</i>, 
+also known as an <i>hyper-cardioid</i> microphone.  Making the microphone still 
+more directional means mostly making it reject sound from the sides than making 
+it reject sound from the back.  In fact, a <i>bi-directional</i> microphone, 
+also known as a <i>figure 8</i> microphone, picks up sound equally well from the
+front and the back but rejects sounds from the sides, especially sounds arriving 
+from 90&deg; off-axis.  Finally, microphones that reject sounds from almost all 
+angles except those in a narrow range of angles from directly on-axis are called 
+<i>shotgun</i> microphones.  Shotgun microphones will tend to be the largest and 
+lowest-fidelity microphones whereas omnidirectional microphones will be the easiest
+to miniaturize and make high-fidelity.<br><br>  
+
+Before explaining each of the different types of directional microphones it is 
+helpful to understand how the direction of a sound wave is evident to a microphone.  
+Sound waves are longitudinal waves.  They are created by the motion of air molecules.  
+In the illustration below each black dot represents an air molecule.  Sound causes 
+these molecules to vibrate in a pattern that creates compression zones (a higher 
+density of molecules) and rarefaction zones (lower density of air molecules) that 
+form in lines.  These lines move in a continuous direction&mdash;the direction in 
+which the sound is traveling.  In the caption below the illustration there is a link
+to a web page that includes an animation of the illustration below.  The animation 
+is valuable for visualizing how sound moves through air in a particular direction.
+The illustration below is valid for on source of sound that is far from the microphone.
+If the sound is very close to the microphone, for example a vocalist who is hand-holding
+the microphone about an inch from their mouth, the lines of compression and rarefaction 
+become curved.<br><br>
+
+<p align="center"><img src="Longitudinal_waves.png"><br>
+<i>Above:  A visualization of sound in air.  Please check out the <br>
+<a href="https://www.acs.psu.edu/drussell/Demos/waves/wavemotion.html"
+>animation of the above illustration</a></i>.<br>
+<br><p>
+
+<p align="center"><img src="Longitudinal_waves_close.png"><br>
+<i>Above:  A visualization of sound in air close to the source.<br>
+Longitudinal waves have a spherical shape close to the source.
+<small><a href="https://pixabay.com/vectors/singer-singing-audio-sound-wave-29259/"
+>Pixabay</a> (edited).</small></i><br>
+<br><p>
+
+These characteristics of how sound travels through air are important in understanding
+how microphones are made directional and how to make best use of directional 
+microphones. <br><br> 
+
+<i><b>Omnidirectional</i></b><br>
+
+"Omni" means "all."  An omnidirectional microphone is "all-directional."  The 
+important aspect of an omni directional microphone is that it responds to the 
+pressure waves of the sound-field only at a single point in the three-dimensional 
+space of the sound-field.  This "single point" sensitivity is what makes it 
+omnidirectional.<br><br>
+
+At any single point in the sound field there is only a pressure difference between 
+the compressed areas and the rarefied areas.  As these areas pass over a single 
+point a signal representing the pressure changes can be derived.  The direction 
+in which the sound is traveling does not matter
+
+<p align="center"><img src="Omni1.png"><br>
+<i>Above:  The arrow shows the direction of sound waves.<br>
+The blue box represents an omnidirectional microphone.  The small portion 
+at the top senses the pressure at that point.
+<small>Illustration by </small><span style="font-family:'Garamond'"
+>d<small><small><small>DB</small></small></small></span>.</i><br>
+<br><p>
+
+<p align="center"><img src="Omni2.png"><br>
+<i>Above:  The direction of the sound does not matter.  Even if the 
+direction was completely reversed, or turned to any angle, the pressure 
+changes at the sensitive point of the microphone are equally easily sensed.
+<small>Illustration by </small><span style="font-family:'Garamond'"
+>d<small><small><small>DB</small></small></small></span>.</i><br>
+<br><p>
+
+
+
+
+
+
 
 
 
@@ -754,7 +849,9 @@ the harder it is to make it directional and high-fidelity.
 
 Planned for the future on this page:<br>
 <br>
-2.) Directionality<br>
+2.) More on Directionality<br>&nbsp; &nbsp; &nbsp; &nbsp; 
+    More on omnidirectional microphones<br>&nbsp; &nbsp; &nbsp; &nbsp; 
+    Cardioid, super-cardioid, bi-directional, shotgun microphones
 3.) Audio Fidelity<br>
 -Capsule technologies<br><br>
 
