Fixed some poorly expressed ideas about mic directionality in HoW_S 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -752,7 +752,7 @@ It is relatively easy to make a microphone that is not at all sensitive to the
 direction of the sound as the sound approaches the microphone.  As the sensitivity 
 of the microphone to the direction of the approach of the sound waves is increased 
 the microphone becomes increasingly difficult to miniaturize and it becomes more 
-difficulty to maintain high-fidelity audio reproduction.  <br><br>
+difficult to maintain high-fidelity audio reproduction.  <br><br>
 
 A microphone that is completely insensitive to directionality is said to be 
 <i>omnidirectional</i>.  The next step in increasing the directionality of the 
@@ -772,7 +772,7 @@ from 90&deg; off-axis.  Finally, microphones that reject sounds from almost all
 angles except those in a narrow range of angles from directly on-axis are called 
 <i>shotgun</i> microphones.  Shotgun microphones will tend to be the largest and 
 lowest-fidelity microphones whereas omnidirectional microphones will be the easiest
-to miniaturize and make high-fidelity.<br><br>  
+to miniaturize and will tend to deliver the highest-fidelity.<br><br>  
 
 Before explaining each of the different types of directional microphones it is 
 helpful to understand how the direction of a sound wave is evident to a microphone.  
@@ -784,10 +784,14 @@ form in lines.  These lines move in a continuous direction&mdash;the direction i
 which the sound is traveling.  In the caption below the illustration there is a link
 to a web page that includes an animation of the illustration below.  The animation 
 is valuable for visualizing how sound moves through air in a particular direction.
-The illustration below is valid for on source of sound that is far from the microphone.
-If the sound is very close to the microphone, for example a vocalist who is hand-holding
-the microphone about an inch from their mouth, the lines of compression and rarefaction 
-become curved.<br><br>
+The illustration below is valid for a source of sound far away, say three feet or 
+more away.  Close to the source of sound the lines of compression and rarefaction 
+are curved and spherical.  Whereas the lines of compression and rarefaction move 
+outward from the source, the air molecules just bounce back-and-forth for an ordinary 
+sound wave.  Not illustrated here is a plosive soundwave, in which there is a 
+sudden addition of air molecules at the source creating a puff of wind in addition
+to the longitudinal waves.  Pronunciation of letters p, b, t and some others create
+some plosive sound as well as longitudinal sound.<br><br>
 
 <p align="center"><img src="Longitudinal_waves.png"><br>
 <i>Above:  A visualization of sound in air.  Please check out the <br>
@@ -823,16 +827,16 @@ in which the sound is traveling does not matter
 <i>Above:  The arrow shows the direction of sound waves.<br>
 The blue box represents an omnidirectional microphone.  The small portion 
 at the top senses the pressure at that point.
-<small>Illustration by </small><span style="font-family:'Garamond'"
->d<small><small><small>DB</small></small></small></span>.</i><br>
+<small>Illustration by Prof. </small></i><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<br>
 <br><p>
 
 <p align="center"><img src="Omni2.png"><br>
 <i>Above:  The direction of the sound does not matter.  Even if the 
 direction was completely reversed, or turned to any angle, the pressure 
 changes at the sensitive point of the microphone are equally easily sensed.
-<small>Illustration by </small><span style="font-family:'Garamond'"
->d<small><small><small>DB</small></small></small></span>.</i><br>
+<small>Illustration by Prof. </small></i><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<<br>
 <br><p>
 
 
