--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/02/2021 7:52 pm)
+                              >(Last update: 3/08/2021 10:00 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -114,9 +114,9 @@ PS                                                           <BR>
 		>3/05</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/201788140/download?download_frd=1"
+        >3/08</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Transfer functions, Bode plots,          <br>&nbsp;
         Read: &nbsp;Appendix F,                          <BR>&nbsp;
