--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/08/2021 10:00 am)
+                              >(Last update: 3/08/2021 10:29 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,14 +84,14 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 7
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        3/08
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31611898"
-		>3/05</a>
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31694406"
+		>3/12</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
@@ -101,7 +101,7 @@ PS                                                           <BR>
         Topics: HF model of a MOSFET, and of a BJT     <br>&nbsp; 
         Read: &nbsp; Ch. 10, Section 10.1              <BR>&nbsp;
 		                                               <br>&nbsp;
-        Do <DO>+10.2, 10.3 (more to be added. . .)</DO>
+        Do <DO>F.5, +10.2, 10.3, +10.6, 10.7 </DO>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  6
