--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -230,17 +230,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/201872585/download?download_frd=1"><!-- -->
 	  3/08<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/202038630/download?download_frd=1"><!-- -->
-      3/10<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      3/12<!-- --</a><!-- --></td>
+      3/10<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/202236163/download?download_frd=1"><!-- -->
+      3/12<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=x0ZWvFjVdA4">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=DMAa4nEA_lo">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=AGoiIXJJ7bk">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Review prob. F.9, Four MOSFET parasitics that limit hi freq response<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Review prob. 10.3, MOSFET, BJT hi-freq models, unity-gain frequency <i>f<sub>T</sub></i><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Review prob. 10.7, High-frequency preformance of a CS amplifier<!--end comment--></td>  
    </TR><!-- Week of 3/14 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
