Published slides, video, PS#7 solutions for EGR 323, some updates to HoW_S, mics, pattern logos 	new file:   HOW_S/MICS/Cardioid_logo.png 	new file:   HOW_S/MICS/Figure_eight_logo.png 	new file:   HOW_S/MICS/Omni_logo.png 	new file:   HOW_S/MICS/Omni_logo.xcf 	new file:   HOW_S/MICS/Super_Cardioid_logo.png 	modified:   HOW_S/MICS/mic_types.html 	new file:   HOW_S/Omni_logo.png 	modified:   S21/323/323S21DN.HTM 	modified:   S21/323/323S21PS.HTM

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -810,7 +810,7 @@ These characteristics of how sound travels through air are important in understa
 how microphones are made directional and how to make best use of directional 
 microphones. <br><br> 
 
-<i><b>Omnidirectional</i></b><br>
+<img src="Omni_logo.png"><i><b>Omnidirectional</i></b><br>
 
 "Omni" means "all."  An omnidirectional microphone is "all-directional."  The 
 important aspect of an omni directional microphone is that it responds to the 
@@ -826,17 +826,17 @@ in which the sound is traveling does not matter
 <p align="center"><img src="Omni1.png"><br>
 <i>Above:  The arrow shows the direction of sound waves.<br>
 The blue box represents an omnidirectional microphone.  The small portion 
-at the top senses the pressure at that point.
-<small>Illustration by Prof. </small></i><span style="font-family:'Garamond'"
+at the top senses the pressure at that point.</i>
+<small>Illustration by Prof. </small><span style="font-family:'Garamond'"
 >d<small><small>DB</small></small></span>.<br>
 <br><p>
 
 <p align="center"><img src="Omni2.png"><br>
 <i>Above:  The direction of the sound does not matter.  Even if the 
 direction was completely reversed, or turned to any angle, the pressure 
-changes at the sensitive point of the microphone are equally easily sensed.
-<small>Illustration by Prof. </small></i><span style="font-family:'Garamond'"
->d<small><small>DB</small></small></span>.<<br>
+changes at the sensitive point of the microphone are equally easily sensed.</i>
+<small>Illustration by Prof. </small><span style="font-family:'Garamond'"
+>d<small><small>DB</small></small></span>.<br>
 <br><p>
 
 
