--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/12/2021 4:34 pm)
+                              >(Last update: 3/15/2021 5:02 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -116,9 +116,9 @@ PS                                                           <BR>
 		>3/12</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/202491074/download?download_frd=1"
+        >3/15</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: HF model of a MOSFET, and of a BJT     <br>&nbsp; 
         Read: &nbsp; Ch. 10, Section 10.1              <BR>&nbsp;
