Published slides and video for today, added turn-in link and shortened 323PS#7, rotated some icons in HoW_S 	modified:   HOW_S/MICS/Cardioid_logo.png 	modified:   HOW_S/MICS/Figure_eight_logo.png 	modified:   HOW_S/MICS/Omni_logo.png 	modified:   HOW_S/MICS/Super_Cardioid_logo.png 	modified:   S21/323/323S21DN.HTM 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -245,19 +245,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/202490026/download?download_frd=1"><!-- -->
-	  3/15<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      3/17<!-- --</a><!-- --><br><!-- --<a href=
+	  3/15<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/202746188/download?download_frd=1"><!-- -->
+      3/17<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       3/19<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=gA0f7kFJxuY">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=sa02-y3J2R0">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Miller's theorem, CS and CE with low source <i>R<sub>sig</sub></i>, dominant pole  
 	  <!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment--><i>T</i>(<i>s</i>) = <i>F<sub>L</sub></i>(<i>s</i>)<i>A<sub>M</sub>F<sub>H</sub></i>(<i>s</i>), estimating &omega;<i><sub>H</sub></i><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/21 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
