--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/15/2021 5:02 pm)
+                              >(Last update: 3/17/2021 7:22 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,15 +84,34 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ &nbsp;
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        &nbsp; 
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31694406"
+		>3/12</a>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
+        >1/30</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Open Circuit Time Const. <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		        Hi-freq response of cascode.           <br>&nbsp;
+        Read: &nbsp; Ch. 10, Section 10.4  <BR>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>+10.48, +10.50</DO> (more to be added)
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  8
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         3/12
    <!-- Due -->             </TD><TD align="center" valign="top">
-        3/19<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31694406"
-		>3/12</a>
-
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31750763"
+		>3/19</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
         "https://dordt.instructure.com/files/20095xxxx/download?download_frd=1"
@@ -101,9 +120,10 @@ PS                                                           <BR>
         Topics: Miller's Thm, Open Circuit Time Const. <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 		        Hi-freq response of cascode.           <br>&nbsp;
 	    Review: Bode plots, Appendix F                 <br>&nbsp;
-        Read: &nbsp; Ch. 10, Sections 10.2, 10.3, 104  <BR>&nbsp;
+        Read: &nbsp; Ch. 10, Sections 10.2, 10.3  <BR>&nbsp;
 		                                               <br>&nbsp;
-        Do <DO>, F.6, F.10, 10.38, +10.48, +10.50</DO>
+        Do <DO>F.6, F.10, 10.38</DO>                 <br>&nbsp;<small>
+		<i>(This assignment was shortened on Wed. evening, 3/17.)</i></small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  7
