Published slides, video, PS#9 for EGR 323 	modified:   S21/323/323S21DN.HTM 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/17/2021 7:22 pm)
+                              >(Last update: 3/19/2021 9:39 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,12 +84,12 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 9
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp; 
+        3/19
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
+        3/26<!--<a href=
 		"https://dordt.instructure.com/courses/3110075/assignments/31694406"
 		>3/12</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
@@ -98,10 +98,11 @@ PS                                                           <BR>
         >1/30</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Open Circuit Time Const. <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-		        Hi-freq response of cascode.           <br>&nbsp;
-        Read: &nbsp; Ch. 10, Section 10.4  <BR>&nbsp;
+		        Hi-freq response of cascode, CS, diff amps<br>&nbsp;
+		Review: Ch. 10, Section 10.3                   <br>&nbsp;
+        Read: &nbsp; Ch. 10, Section 10.4, 10.5, 10.6  <BR>&nbsp;
 		                                               <br>&nbsp;
-        Do <DO>+10.48, +10.50</DO> (more to be added)
+        Do <DO>+10.48, +10.50, 10.65, +10.69, 10.71, 10.72</DO>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  8
